--- a/Notebooks/AttentionPdf.ipynb
+++ b/Notebooks/AttentionPdf.ipynb
@@ -176,6 +176,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "99b71860",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "page_content='Provided proper attribution is provided, Google hereby grants permission to\n",
+      "reproduce the tables and figures in this paper solely for use in journalistic or\n",
+      "scholarly works.\n",
+      "Attention Is All You Need\n",
+      "Ashish Vaswani∗\n",
+      "Google Brain\n",
+      "avaswani@google.com\n",
+      "Noam Shazeer∗\n",
+      "Google Brain\n",
+      "noam@google.com\n",
+      "Niki Parmar∗\n",
+      "Google Research\n",
+      "nikip@google.com\n",
+      "Jakob Uszkoreit∗\n",
+      "Google Research\n",
+      "usz@google.com\n",
+      "Llion Jones∗\n",
+      "Google Research\n",
+      "llion@google.com\n",
+      "Aidan N. Gomez∗†\n",
+      "University of Toronto\n",
+      "aidan@cs.toronto.edu\n",
+      "Łukasz Kaiser∗\n",
+      "Google Brain\n",
+      "lukaszkaiser@google.com\n",
+      "Illia Polosukhin∗‡\n",
+      "illia.polosukhin@gmail.com\n",
+      "Abstract\n",
+      "The dominant sequence transduction models are based on complex recurrent or\n",
+      "convolutional neural networks that include an encoder and a decoder. The best\n",
+      "performing models also connect the encoder and decoder through an attention\n",
+      "mechanism. We propose a new simple network architecture, the Transformer,\n",
+      "based solely on attention mechanisms, dispensing with recurrence and convolutions' metadata={'modDate': 'D:20240410211143Z', 'author': '', 'title': '', 'subject': '', 'producer': 'pdfTeX-1.40.25', 'keywords': '', 'creationdate': '2024-04-10T21:11:43+00:00', 'total_pages': 15, 'moddate': '2024-04-10T21:11:43+00:00', 'creator': 'LaTeX with hyperref', 'creationDate': 'D:20240410211143Z', 'file_path': '../Data/Attention_is_all_you_need (1) (3).pdf', 'trapped': '', 'format': 'PDF 1.5', 'source': '../Data/Attention_is_all_you_need (1) (3).pdf'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(retireved_results[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "aaecc902",
    "metadata": {},
